<resources>
    <string name="app_name">電卓</string>
    <string name="hint_input_number">数字を入力</string>
    <string name="button_calc">計算</string>
    <string name="calc_result_text">=%1$,3d円</string>
    <string name="calc_result_default">=計算結果</string>
    <string name="button_next">続けて計算する</string>
    <string name="title_another_calc">別計算</string>
    <string name="button_back">戻る</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>


</resources>
