<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.synchrofood.calculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="35dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/numberInput1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/hint_input_number"
                android:inputType="number" />

            <Button
                android:id="@+id/calcButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/numberInput1"
                android:layout_toEndOf="@+id/numberInput1"
                android:background="@drawable/shape_rounded_corners_5dp"
                android:text="@string/button_calc"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold" />

            <Spinner
                android:id="@+id/operatorSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/numberInput1"
                android:layout_below="@+id/numberInput1"
                android:entries="@array/operators"
                android:textSize="18sp"
                android:layout_marginTop="35dp" />

            <Button
                android:id="@+id/calcButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/numberInput2"
                android:layout_toEndOf="@+id/numberInput2"
                android:background="@drawable/shape_rounded_corners_5dp"
                android:text="@string/button_calc"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/calcResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/calcButton2"
                android:layout_marginTop="35dp"
                android:layout_toStartOf="@+id/calcButton2"
                android:text="@string/calc_result_default"
                android:textColor="@android:color/black"
                android:textSize="@dimen/primary_text_size" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/calcButton2"
                android:layout_below="@+id/calcResult"
                android:layout_marginTop="35dp"
                android:padding="20dp"
                android:text="@string/button_next"
                android:background="@drawable/shape_rounded_corners_5dp"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:elevation="0dp"
                android:fontFamily="sans-serif-medium" />

            <EditText
                android:id="@+id/numberInput2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/operatorSelector"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="@string/hint_input_number"
                android:inputType="number" />


        </RelativeLayout>
    </ScrollView>
</FrameLayout>
